[gd_scene load_steps=24 format=2]

[ext_resource path="res://menu/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://edit/UI.gd" type="Script" id=2]
[ext_resource path="res://edit/ImageInfo.gd" type="Script" id=3]
[ext_resource path="res://edit/Images.gd" type="Script" id=4]
[ext_resource path="res://fonts/BergenSans-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/BergenSans-Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://edit/PreviewPanel.gd" type="Script" id=7]
[ext_resource path="res://edit/Viewport.gd" type="Script" id=8]
[ext_resource path="res://edit/Camera.gd" type="Script" id=9]
[ext_resource path="res://edit/Editor.gd" type="Script" id=10]
[ext_resource path="res://edit/FileDialog.gd" type="Script" id=11]
[ext_resource path="res://edit/InitPanel.gd" type="Script" id=12]
[ext_resource path="res://edit/ButtonTheme.tres" type="Theme" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.180392, 0.180392, 0.188235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="NoiseTexture" id=10]
width = 1200
height = 1000

[sub_resource type="DynamicFont" id=2]
size = 53
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.180392, 0.180392, 0.188235, 1 )
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="DynamicFont" id=5]
size = 65
font_data = ExtResource( 5 )

[node name="Edit" type="Node2D"]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 700, 550 )
current = true
script = ExtResource( 9 )

[node name="UI" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = 1300.0
margin_bottom = 1100.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 0.7
margin_bottom = 53.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScrollContainer"]
margin_right = 1200.0
margin_bottom = 753.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageInfo" type="Panel" parent="UI"]
margin_top = 766.0
margin_right = 1200.0
margin_bottom = 1000.0
custom_styles/panel = SubResource( 9 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
camera_path = NodePath("../../Camera")
editor_path = NodePath("../../Editor")

[node name="Sprite" type="Sprite" parent="UI/ImageInfo"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 910, 20 )
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 10 )
centered = false

[node name="TitleLabel" type="Label" parent="UI/ImageInfo"]
margin_left = 239.0
margin_top = 20.0
margin_right = 873.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "--"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FolderLabel" type="Label" parent="UI/ImageInfo"]
margin_left = 239.0
margin_top = 88.0
margin_right = 873.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
text = "--"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="Button" parent="UI/ImageInfo"]
margin_left = 676.0
margin_top = 142.0
margin_right = 880.0
margin_bottom = 197.0
theme = ExtResource( 13 )
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="UI"]
margin_left = 24.0
margin_top = 790.0
margin_right = 220.0
margin_bottom = 845.0
theme = ExtResource( 13 )
text = "Add topic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="Panel" parent="."]
margin_left = 100.0
margin_top = 1200.0
margin_right = 1300.0
margin_bottom = 2200.0
custom_styles/panel = SubResource( 6 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
camera_path = NodePath("../Camera")

[node name="Top" type="Panel" parent="Editor"]
margin_top = -100.0
margin_right = 1200.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Editor/Top"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1177.0
margin_top = 10.5
margin_right = -985.0
margin_bottom = 79.5
theme = ExtResource( 13 )
text = "Save and return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="Editor/Top"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -978.0
margin_top = 11.5
margin_right = -709.0
margin_bottom = 79.5
theme = ExtResource( 13 )
text = "Return without saving"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Editor"]
anchor_right = 1.0
anchor_bottom = 0.7
margin_left = 850.0
margin_top = 100.0
margin_bottom = 300.0
custom_styles/bg = SubResource( 8 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="VBoxContainer" parent="Editor/ScrollContainer"]
margin_right = 350.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Editor/ScrollContainer/Images"]
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 290, 80 )
theme = ExtResource( 13 )
text = "Upload image"

[node name="PreviewPanel" type="Panel" parent="Editor"]
margin_left = 23.0
margin_top = 171.0
margin_right = 1223.0
margin_bottom = 1171.0
rect_scale = Vector2( 0.667, 0.667 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Editor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -573.0
margin_top = -466.0
margin_right = 39.0
margin_bottom = -30.0
rect_min_size = Vector2( 170, 59.5 )
popup_exclusive = true
window_title = "Open File(s)"
mode = 1
access = 2
filters = PoolStringArray( "*.png ; PNG images", "*.jpg, *.jpeg ; JPG images", "*.bmp ; BMP images" )
current_dir = "/Users/thoma/Documents/GitHub/2122-Reflect-flect-flect-flect/Code/Visualization"
current_path = "/Users/thoma/Documents/GitHub/2122-Reflect-flect-flect-flect/Code/Visualization/"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InitPanel" type="Panel" parent="Editor"]
visible = false
margin_right = 1200.0
margin_bottom = 1000.0
custom_styles/panel = SubResource( 4 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Editor/InitPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -845.0
margin_top = -875.0
margin_right = 361.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="VBoxContainer" parent="Editor/InitPanel/ScrollContainer"]
custom_constants/separation = -300

[node name="Label" type="Label" parent="Editor/InitPanel"]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 5 )
text = "Select a template:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Editor"]
size = Vector2( 1200, 1000 )
render_target_v_flip = true
render_target_update_mode = 3
script = ExtResource( 8 )

[node name="Menu" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 100, 100 )

[node name="Edit" parent="Menu" index="2"]
disabled = true

[connection signal="pressed" from="UI/ImageInfo/EditButton" to="UI/ImageInfo" method="_on_EditButton_pressed"]
[connection signal="pressed" from="UI/NewButton" to="UI" method="_on_NewButton_pressed"]
[connection signal="pressed" from="Editor/Top/SaveButton" to="Editor" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Editor/Top/ReturnButton" to="Editor" method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Editor/ScrollContainer/Images/Button" to="Editor/FileDialog" method="_on_Button_pressed"]
[connection signal="files_selected" from="Editor/FileDialog" to="Editor/ScrollContainer/Images" method="_on_FileDialog_files_selected"]
[connection signal="changing_scene" from="Menu" to="UI" method="_on_Menu_changing_scene"]

[editable path="Menu"]
